# matchup_helper

./: .gitignore  README.md  build.bat  build.ps1  dev.bat  package-lock.json  package.json
.cargo/: config.toml
data/: example.json
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lcu.rs  lib.rs  main.rs  matchup.rs  storage.rs
