[package]
name = "matchuphelper"
version = "1.0.0"
description = "Lightweight desktop app for managing LoL matchup notes"
authors = ["you"]
edition = "2021"

[lib]
name = "matchuphelper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.22"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
